# hello-world-rust

./: .gitignore  Cargo.toml  LICENSE  init.sh
.github/workflows/: audit.yml  rust.yml
doc/: DataTypes.md
src/: main.rs
src/lib/: main.rs
src/test/: TESTS.md
