# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hello-world-rs"
version = "0.1.3"
authors = [ "Vallabh Kansagara <vrkansagara@gmail.com>" ]
edition = "2021"
license-file = "LICENSE"
description = "Hello world in Rust language"
documentation = "https://github.com/vrkansagara/hello-world-rust/wiki"
homepage = "https://github.com/vrkansagara/hello-world-rust/wiki"
repository = "https://github.com/vrkansagara/hello-world-rust"
keywords = ["vrkansagara","skeleton","sample","hello-world"]
readme = "README.md"
exclude = [".git", ".gitignore", "README.md"]
include = ["**/*.rs", "Cargo.toml"]

[lib]
name = "hello-world-rs"
path = "src/main.rs"

[dependencies]