# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Build parameters https://doc.rust-lang.org/rustc/codegen-options/index.html
# Exploring PGO for the Rust compiler https://blog.rust-lang.org/inside-rust/2020/11/11/exploring-pgo-for-the-rust-compiler.html

[package]
name = "hello-world-rs"
version = "0.1.4"
authors = [ "Vallabh Kansagara <vrkansagara@gmail.com>" ]
edition = "2021"
license-file = "LICENSE"
description = "Hello world in Rust language"
documentation = "https://github.com/vrkansagara/hello-world-rust/wiki"
homepage = "https://github.com/vrkansagara/hello-world-rust/wiki"
repository = "https://github.com/vrkansagara/hello-world-rust"
keywords = ["vrkansagara","skeleton","sample","hello-world"]
readme = "README.md"
exclude = [".git", ".gitignore","Cargo.lock","README.md",".github"]
include = ["**/*.rs", "Cargo.toml"]
publish = true

[lib]
name = "hello_world_rs"
path = "src/main.rs"

[profile.dev]
opt-level = 0
lto = "thin"
panic = "abort"

[profile.release]
opt-level = 3
lto = true
overflow-checks = true
panic = "abort"


[dependencies]